--- a/css/style.css
+++ b/css/style.css
@@ -252,4 +252,48 @@ footer{
     margin: 15px;
     border-radius: 15px;
     padding: 10px;
+
+}
+@media (max-width: 767px) {
+    header {
+        padding: 5px;
+    }
+    header nav ul {
+        margin: 0px 10px;
+    }
+    header nav li {
+        font-size: 20px;
+        margin: 5px;
+    }
+    #logotheSS {
+        height: 10%;
+        width: 10%;
+        margin: 0px 10px;
+    }
+    /* Agrega más estilos según sea necesario */
+    
+    /* Estilos para la sección de películas */
+    .section-home {
+        flex-direction: column;
+    }
+    .article-home {
+        width: 100%;
+    }
+    .article-home img {
+        max-width: 100%;
+        height: auto;
+    }
+    /* Agrega más estilos según sea necesario */
+}
+
+/* Estilos para pantallas medianas, como tabletas */
+@media (min-width: 768px) and (max-width: 1023px) {
+    /* Estilos específicos para tabletas */
+    /* ... */
+}
+
+/* Estilos para pantallas más grandes, como computadoras de escritorio */
+@media (min-width: 1024px) {
+    /* Estilos específicos para escritorio */
+    /* ... */
 }
