--- a/css/style.css
+++ b/css/style.css
@@ -140,10 +140,20 @@ footer{
     border-radius: 15px;
     padding: 10px;
 }
-.genero-section h2 {
-    font-size: 24px;
-    margin-bottom: 10px;
+
+
+.genero-section-tv {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    margin-bottom: 20px;
+    padding: 20px;
+
+    background-color: rgb(103, 93, 103);
+    margin: 15px;
+    border-radius: 15px;
+    padding: 10px;
 }
+
 
 /* Estilos para la lista de categoría */
 .genero-list {
